--- a/templates/wechat_config.html
+++ b/templates/wechat_config.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('index') }}">⚙️ 微信公众号配置</a>
             <div class="ms-auto">
-                <a href="{{ url_for('policy_analysis_page') }}" class="btn btn-outline-light btn-sm">返回政策分析</a>
+                <a href="{{ url_for('policy_analysis_dashboard') }}" class="btn btn-outline-light btn-sm">返回政策分析</a>
             </div>
         </div>
     </nav>
